01/05/2025	15:02	Daniele Chiarion	Add icons to the different navbars.
01/05/2025	15:21	Daniele Chiarion	Completed footer part. 
01/05/2025	15:41	Daniele Chiarion	Add terms and conditions page. 
01/05/2025	15:50	Daniele Chiarion	Starting with the car configurator page.
01/05/2025	16:20	Daniele Chiarion	Change the color of the thumb in the range input. 
01/05/2025	17:16	Daniele Chiarion	Completed car configurator page.
04/05/2025	19:59	Daniele Chiarion	Start car details page
05/05/2025	10:07	Daniele Chiarion	Completed table with car details
05/05/2025	10:12	Daniele Chiarion	Completed page of the car details with the buttons and the responsive settings.
05/05/2025	11:23	Daniele Chiarion	Completed content part of the login page. Style part is missing.
05/05/2025	16:31	Daniele Chiarion	Login part completed.
05/05/2025	17:01	Daniele Chiarion	Change buttons in the car details page adding icons for each operation.
05/05/2025	17:13	Daniele Chiarion	Completed sign up page. 
05/05/2025	17:24	Daniele Chiarion	Add and define style for possible success or error messages.
07/05/2025  	11:46 	Davide Laghi 		Added and defined a new image to images.
07/05/2025  	11:58 	Davide Laghi 		Added footer and made Card stay in different collums to the shopping cart.
07/05/2025	12:17	Daniele Chiarion	Add the admin part where to add the items of the site. 
09/05/2025	20:52	Daniele Chiarion	Change the configurator dimensions and colors. Replacing max length with the car type (coupé, suv ecc.)
10/05/2025  	10:52 	Davide Laghi 		Added Footer to the purchase list.
12/05/2025	17:14	Daniele Chiarion	Add id to the my pages for a future js implementation. 
12/05/2025	19:52	Daniele Chiarion	Completed add-car part for the admin
12/05/2025	20:12	Daniele Chiarion	Add car-brand section for admin
12/05/2025	20:40	Daniele Chiarion	Add optional section for admin
13/05/2025	10:19	Daniele Chiarion	Add html page to test if all the elements are ready