@@ -442,7 +442,9 @@
                         </div>
 
                         <h5 class="form-input-section">Immagini macchina</h5>
-                        <label for="formFileMultiple" class="form-label">Inserisci le immagini della macchina</label>
+                        <label for="formFileMultiple" class="form-label">Inserisci una foto della macchina</label>
+                        <input class="form-control form-input-item" type="file" id="filePathCarImages" accept="image/*">
+                        <label for="formFileMultiple" class="form-label">Inserisci i dettagli della macchina</label>
                         <input class="form-control form-input-item" type="file" id="filePathCarImages" accept="image/*" multiple>
                 </div>
             </div>
