@@ -190,7 +190,25 @@
             </div>
             <div class="row">
                 <div class="col-md-3 d-flex align-items-start">
-                    <img src="../../img/variable/fiat-panda.jfif">
+                    <div id="carouselExample2" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="../../img/variable/fiat-panda.jfif">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../../img/variable/detail1.jpeg">
+                          </div>
+                        </div>
+                        <!-- Controls -->
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
                 <div class="col-md-5 d-flex align-items-center car-details-table roundend overflow-hidden border">    
                     <table class="table table-striped-columns">
@@ -235,8 +253,8 @@
                             <td>5</td>
                         </tr>
                         <tr>
-                            <th scope="row">Lunghezza</th>
-                            <td>367cm</td>
+                            <th scope="row">Tipologia</th>
+                            <td>City-car</td>
                         </tr>
                         <tr>
                             <th scope="row">Optional</th>
